# gnome-shell-extension-panel-osd

./: AUTHORS  Makefile.am  README.md  autogen.sh  configure.ac  gnome-shell-extension-panel-osd.cbp  gnome-shell-extension-panel-osd.spec  gnome-shell-extension-top-notification.cbp  gnome-shell-extension-top-notification.spec  update_revision.sh
data/: Makefile.am  metadata.json.in  org.gnome.shell.extensions.panel-osd.gschema.xml.in  panel-osd-settings.ui  stylesheet.css
po/: LINGUAS  Makefile.in  Makevars  POTFILES.in  de.po  es.po  gnome-shell-extension-panel-osd.pot  nl.po  pl.po  pt_BR.po  ru.po  ru_RU.po  update.js  zh_CN.po
src/: Makefile.am  extension.js  prefs.js
