# Change these to modify how installation is performed
topextensiondir = $(datadir)/gnome-shell/extensions

uuid = panel-osd@berend.de.schouwer.gmail.com

extensiondir = $(topextensiondir)/$(uuid)

dist_extension_DATA = extension.js convenience.js prefs.js

nodist_extension_DATA = $(EXTRA_EXTENSION)
